tests/ui/type_ambiguous_method.stderr
error: tests/ui/type_ambiguous_method.ql:18:12: ambiguous method `ping` on type `Counter`; multiple matching methods found
      return counter.ping()
             ^^^^^^^^ member access here
